--- a/app.html
+++ b/app.html
@@ -5,5 +5,9 @@
 </head>
 <body>
 
+
+
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
