--- a/app.html
+++ b/app.html
@@ -4,6 +4,7 @@
 	<title>Aplicacion de pruebas JQuery</title>
 	<!-- Es es para determinar o especificar los diferente caracters o codificacion que se tendran en cuenta -->
 	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="index.css">
 	<!--  -->
 </head>
 <body>
@@ -17,6 +18,7 @@
 		</section>
 
 		<footer id="app-footer">
+			<p></p>
 
 		</footer>
 	</div>
