--- a/app.html
+++ b/app.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Aplicacion de pruebas JQuery</title>
+	<!-- Es es para determinar o especificar los diferente caracters o codificacion que se tendran en cuenta -->
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="index.css">
+	<!--  -->
 </head>
 <body>
+	<div id="app-container">
+		<header id="app-header" class="">
+			<h1>Este es cabecera</h1>
+		</header><!-- /header -->
 
+		<section id="app-body">
+
+		</section>
+
+		<footer id="app-footer">
+			<p></p>
+
+		</footer>
+	</div>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
